force-app/main/default/objects/Charitable_Solicitation_Registration1__c/Charitable_Solicitation_Registration1__c.object-meta.xml
<CustomObject>
    <label>Form Filing</label>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Filings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>