force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Accountant_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Auditor__c</fullName>
    <inlineHelpText>35.	Accountant/Auditor:  The name, address, and telephone number of each independent accountant or auditor for the organization.</inlineHelpText>
    <label>Accountant/Auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>