force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Banks__c.field-meta.xml
<CustomField>
    <fullName>Banks__c</fullName>
    <inlineHelpText>34.	Banks: The name and address of each bank or other financial institution holding funds for the organization, and all of the corresponding account numbers</inlineHelpText>
    <label>Banks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>