force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Board_meetings__c.field-meta.xml
<CustomField>
    <fullName>Board_meetings__c</fullName>
    <inlineHelpText>23.   How many Board of Directors meetings (regular and special) were held during the last fiscal year?</inlineHelpText>
    <label>Board meetings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>