force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Board_of_Directors_Officers_Trustees__c.field-meta.xml
<CustomField>
    <fullName>Board_of_Directors_Officers_Trustees__c</fullName>
    <inlineHelpText>22.    The name and title of each individual on the Board of Directors/Trustees, and each officer.</inlineHelpText>
    <label>Board of Directors/Officers/Trustees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>