force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Budget_approval__c.field-meta.xml
<CustomField>
    <fullName>Budget_approval__c</fullName>
    <inlineHelpText>33. Budget approval:  If different than the Board of Directors, the name, address, and telephone number of each person responsible for the approval of the budget.</inlineHelpText>
    <label>Budget approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>