force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Bylaws__c.field-meta.xml
<CustomField>
    <fullName>Bylaws__c</fullName>
    <inlineHelpText>9.   Bylaws: The approved bylaws of the organization, as amended to date, showing how the charity will be expected to operate.</inlineHelpText>
    <label>Bylaws</label>
    <length>255</length>
    <type>Text</type>
</CustomField>