force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/California__c.field-meta.xml
<CustomField>
    <fullName>California__c</fullName>
    <inlineHelpText>18. California:  For initial registrations, when did the organization begin soliciting in California?</inlineHelpText>
    <label>California</label>
    <length>255</length>
    <type>Text</type>
</CustomField>