force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charitable Solicitation Registrations</relationshipLabel>
    <relationshipName>Charitable_Solicitation_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>