force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Compensation_Information__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Information__c</fullName>
    <inlineHelpText>24.   If not listed on Form 990, please provide the names and titles of the organization’s five highest paid officers or employees and their total annual compensation.</inlineHelpText>
    <label>Compensation Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>