force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <inlineHelpText>21.  Compliance: If yes to any of the below, please provide a brief explanation and copies of any related documents.  Has the organization—</inlineHelpText>
    <label>Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>