force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Control_persons__c.field-meta.xml
<CustomField>
    <fullName>Control_persons__c</fullName>
    <inlineHelpText>25.   A list of the name, home address, birth date, and SSN of person(s) conducting the organization’s day-to-day operations. (States keep SSNs confidential.) Please note that this person may be required to provide their Social Security Number, Date of Birth, and a copy of their photo ID at the time of signing forms.</inlineHelpText>
    <label>Control persons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>