force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Criminal_acts__c.field-meta.xml
<CustomField>
    <fullName>Criminal_acts__c</fullName>
    <inlineHelpText>28.   Criminal acts: Have any of the organization’s officers, directors, or principal executives been convicted of a misdemeanor or felony (other than a traffic offense)? If “yes,” please provide a detailed explanation.</inlineHelpText>
    <label>Criminal acts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>