force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>