force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Employees_of_the_organization__c.field-meta.xml
<CustomField>
    <fullName>Employees_of_the_organization__c</fullName>
    <inlineHelpText>i     Employees of the organization? (Yes/No)</inlineHelpText>
    <label>Employees of the organization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>