force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Financial_records_Custody__c.field-meta.xml
<CustomField>
    <fullName>Financial_records_Custody__c</fullName>
    <inlineHelpText>32. Financial records Custody: The name, address, and telephone number of each person responsible for the custody of the financial records.</inlineHelpText>
    <label>Financial records Custody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>