force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Fundraising_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Expenses__c</fullName>
    <label>Fundraising Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>