force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Fundraising_methods__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_methods__c</fullName>
    <inlineHelpText>15.   Fundraising methods List all methods you use or anticipate using to raise funds (ex mail, telephone, personal contact, membership, internet, etc.).</inlineHelpText>
    <label>Fundraising methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>