force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Funds_Custody__c.field-meta.xml
<CustomField>
    <fullName>Funds_Custody__c</fullName>
    <inlineHelpText>29. Funds Custody: The name, title, address, and telephone number of each person responsible for the custody of funds.</inlineHelpText>
    <label>Funds Custody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>