force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Funds_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Funds_Distribution__c</fullName>
    <inlineHelpText>30. Funds distribution: The name, title, address, and telephone number of each person responsible for the distribution of the funds.</inlineHelpText>
    <label>Funds Distribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>