force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Illinois__c.field-meta.xml
<CustomField>
    <fullName>Illinois__c</fullName>
    <inlineHelpText>19. Illinois: For initial registrations, when did the organization begin soliciting in Illinois?</inlineHelpText>
    <label>Illinois</label>
    <length>255</length>
    <type>Text</type>
</CustomField>