force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Illinois_E_3a__c.field-meta.xml
<CustomField>
    <fullName>Illinois_E_3a__c</fullName>
    <inlineHelpText>a. Please complete the accompanying Form CO-3 (handwritten is fine). Don’t sign it yet, and return it to us.</inlineHelpText>
    <label>Illinois(E(3a)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>