force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Illinois_E_3b__c.field-meta.xml
<CustomField>
    <fullName>Illinois_E_3b__c</fullName>
    <inlineHelpText>b. Contributions received from Illinois during the last fiscal year: $____________</inlineHelpText>
    <label>Illinois(E(3b))</label>
    <length>255</length>
    <type>Text</type>
</CustomField>