force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Illinois_E_3c__c.field-meta.xml
<CustomField>
    <fullName>Illinois_E_3c__c</fullName>
    <inlineHelpText>c. For each of the three highest paid employees in the last fiscal year, their name, title, and amount paid.</inlineHelpText>
    <label>Illinois(E(3c))</label>
    <length>255</length>
    <type>Text</type>
</CustomField>