force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Mailing_Address1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address1__c</fullName>
    <label>Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>