force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Management_General_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Management_General_Expenses__c</fullName>
    <label>Management/General Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>