force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Maryland__c.field-meta.xml
<CustomField>
    <fullName>Maryland__c</fullName>
    <inlineHelpText>a.  Maryland:  Does the institution solicit anyone in Maryland other than a student, former student, parent of a student or former student, present or former board member, or employee</inlineHelpText>
    <label>Maryland</label>
    <length>255</length>
    <type>Text</type>
</CustomField>