force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Massachusetts__c.field-meta.xml
<CustomField>
    <fullName>Massachusetts__c</fullName>
    <inlineHelpText>20.  Massachusetts: For initial registrations, when did the organization begin soliciting in Massachusetts?</inlineHelpText>
    <label>Massachusetts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>