force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/New_York1__c.field-meta.xml
<CustomField>
    <fullName>New_York1__c</fullName>
    <inlineHelpText>b.  New York:  Does the institution file annual financial reports with an educational oversight body within its state government?  If not, does the institution limit its solicitations in New York to its student body, alumni, faculty and trustees, and their families?</inlineHelpText>
    <label>New York1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>