force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/New_York__c.field-meta.xml
<CustomField>
    <fullName>New_York__c</fullName>
    <inlineHelpText>4.  New York:      When (estimate if necessary) did the charity begin soliciting contributions in New York?</inlineHelpText>
    <label>New York</label>
    <length>255</length>
    <type>Text</type>
</CustomField>