force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Nonprofit_donors__c.field-meta.xml
<CustomField>
    <fullName>Nonprofit_donors__c</fullName>
    <inlineHelpText>36.	Nonprofit donors: Did the organization receive financial support from other nonprofit organizations (foundations, public charities, combined campaigns, etc.) during the last fiscal year? If yes, please list the names of the organizations.</inlineHelpText>
    <label>Nonprofit donors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>