force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Ohio__c.field-meta.xml
<CustomField>
    <fullName>Ohio__c</fullName>
    <inlineHelpText>c.  Ohio:  Does the institution solicit anyone in Ohio other than alumni, faculty, trustees, or the student membership and their families?</inlineHelpText>
    <label>Ohio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>