force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Oklahoma__c.field-meta.xml
<CustomField>
    <fullName>Oklahoma__c</fullName>
    <inlineHelpText>d.  Oklahoma:  Are solicitations in Oklahoma “primarily confined to its student body and their families, alumni, faculty, and trustees”?</inlineHelpText>
    <label>Oklahoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>