force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Oregon__c.field-meta.xml
<CustomField>
    <fullName>Oregon__c</fullName>
    <inlineHelpText>e.  Oregon:  Does the institution hold real estate or tangible property in Oregon?  Does the institution limit its solicitations in Oregon to alumni?</inlineHelpText>
    <label>Oregon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>