force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Other_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Names__c</fullName>
    <inlineHelpText>2. Other Names</inlineHelpText>
    <label>Other Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>