force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Oversight_of_fundraisings__c.field-meta.xml
<CustomField>
    <fullName>Oversight_of_fundraisings__c</fullName>
    <inlineHelpText>14.  Oversight of fundraisings:  The name and title of the individual(s) within the organization who oversee fundraising activities.</inlineHelpText>
    <label>Oversight of fundraisings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>