force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/PFR_List__c.field-meta.xml
<CustomField>
    <fullName>PFR_List__c</fullName>
    <inlineHelpText>a. PFR List</inlineHelpText>
    <label>20(a) PFR List</label>
    <type>TextArea</type>
</CustomField>