force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Program_Service_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Program_Service_Expenses__c</fullName>
    <label>Program Service Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>