force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <inlineHelpText>12.   Programs: Specific programs run by the organization in order to accomplish its stated purpose   Please provide a brief description of each program.</inlineHelpText>
    <label>Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>