force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>11.  Purpose: The stated purpose pursued by the organization as you would like it to appear on state registration forms and websites..</inlineHelpText>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>