force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Registered_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registered_Agent__c</fullName>
    <inlineHelpText>38.	Registered Agent:</inlineHelpText>
    <label>Registered Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>