force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Separate_Corporate_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Separate_Corporate_Registrations__c</fullName>
    <inlineHelpText>39.	Separate Corporate Registrations:</inlineHelpText>
    <label>Separate Corporate Registrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>