force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Signatory_authority__c.field-meta.xml
<CustomField>
    <fullName>Signatory_authority__c</fullName>
    <inlineHelpText>31. Signatory authority: The name and address of each person having signatory authority over the disbursement of funds.</inlineHelpText>
    <label>Signatory authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>