force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Signatures__c.field-meta.xml
<CustomField>
    <fullName>Signatures__c</fullName>
    <inlineHelpText>37.	Signatures: The registration forms must be signed (in some states, online) by one of the organization’s executive officers/directors (e.g. CEO, Chairman, President, Executive Director) and the organization’s chief fiscal officer (i.e. CFO or Treasurer). Please provide the name, title, and e-mail address of the two individuals who will be signing the forms</inlineHelpText>
    <label>Signatures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>