force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Solicited_Regardless_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Solicited_Regardless_of_Registration__c</fullName>
    <label>Solicited Regardless of Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>