force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Sources_of_support__c.field-meta.xml
<CustomField>
    <fullName>Sources_of_support__c</fullName>
    <inlineHelpText>1.   Sources of support:</inlineHelpText>
    <label>Sources of support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>