force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/South_Carolina__c.field-meta.xml
<CustomField>
    <fullName>South_Carolina__c</fullName>
    <inlineHelpText>f.  South Carolina:  Does the institution use fundraising counsel, professional solicitors, or commercial co-venturers in connection with solicitations in South Carolina?</inlineHelpText>
    <label>South Carolina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>