force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/States_where_registered__c.field-meta.xml
<CustomField>
    <fullName>States_where_registered__c</fullName>
    <inlineHelpText>16.   A list of all states where the organization</inlineHelpText>
    <label>States where registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a. Is currently registered and allowed to solicit funds</fullName>
            </value>
            <value>
                <fullName>b. Is registered, but its registration is suspended because the state has asked questions about the most recent registration renewal</fullName>
            </value>
            <value>
                <fullName>c. Was registered, but is not registered now. Please explain why the organization is not registered now (e.g., withdrawal, suspension, failure to file renewal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>