force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Street_Address1__c.field-meta.xml
<CustomField>
    <fullName>Street_Address1__c</fullName>
    <label>Street Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>