force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Term_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Employment__c</fullName>
    <label>Term of Employment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>