force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Use_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds__c</fullName>
    <inlineHelpText>13.  Use of funds:  For what does the organization spend the funds it receives?</inlineHelpText>
    <label>Use of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>