force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Volunteers__c</fullName>
    <inlineHelpText>ii.     Volunteers?(Yes/No)</inlineHelpText>
    <label>Volunteers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>