force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/Worship_services__c.field-meta.xml
<CustomField>
    <fullName>Worship_services__c</fullName>
    <inlineHelpText>2.   Worship services:  Does the organization regularly conduct nonprofit religious services and activities?  If so, please describe the services conducted, how frequently, and who attends</inlineHelpText>
    <label>Worship services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>