force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X10_year_Employment_History__c.field-meta.xml
<CustomField>
    <fullName>X10_year_Employment_History__c</fullName>
    <inlineHelpText>26. 10-year Employment History: The employment history (name of employer and dates of employment only) of all control persons named in the previous line item, for the past 10 years.</inlineHelpText>
    <label>10-year Employment History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>