force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X16_a_Currently_Registered__c.field-meta.xml
<CustomField>
    <fullName>X16_a_Currently_Registered__c</fullName>
    <label>16(a) Currently Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>