force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X17__c.field-meta.xml
<CustomField>
    <fullName>X17__c</fullName>
    <inlineHelpText>17.    States where contributions have been solicited</inlineHelpText>
    <label>17</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>