force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X20_b_PFR_Contracts__c.field-meta.xml
<CustomField>
    <fullName>X20_b_PFR_Contracts__c</fullName>
    <inlineHelpText>PFR Contracts Copies of all contracts between the organization and all entities or individuals on the PFR list.</inlineHelpText>
    <label>20(b) PFR Contracts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>