force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X20_c_PFR_Gross_Receipts_Compensation__c.field-meta.xml
<CustomField>
    <fullName>X20_c_PFR_Gross_Receipts_Compensation__c</fullName>
    <inlineHelpText>PFR Financial Info The amount of funds raised by, and compensation paid to each on the PFR list during the fiscal year or for each campaign.</inlineHelpText>
    <label>20(c) PFR Gross Receipts/Compensation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>