force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X20_d__c.field-meta.xml
<CustomField>
    <fullName>X20_d__c</fullName>
    <inlineHelpText>Is any owner, director, officer or employee of a professional fundraiser listed above also a director, officer or employee (or related to a director, officer, or employee) of the organization? If so, please provide the name, title, and employer of each individual, and describe the relationship.</inlineHelpText>
    <label>20(d) Related PFR</label>
    <type>TextArea</type>
</CustomField>