force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X21_a__c.field-meta.xml
<CustomField>
    <fullName>X21_a__c</fullName>
    <inlineHelpText>a. Been enjoined or otherwise prohibited by a government agency/court from soliciting?</inlineHelpText>
    <label>21(a) Enjoined</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>