force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X21_b__c.field-meta.xml
<CustomField>
    <fullName>X21_b__c</fullName>
    <inlineHelpText>b. Been the subject of a proceeding regarding any solicitation or registration?</inlineHelpText>
    <label>21(b) Subject to Proceeding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>