force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X21_c__c.field-meta.xml
<CustomField>
    <fullName>X21_c__c</fullName>
    <inlineHelpText>c. Entered into a voluntary agreement of compliance with any government agency or in a case before a court or administrative agency?</inlineHelpText>
    <label>21(c) Compliance Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>