force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X27_a__c.field-meta.xml
<CustomField>
    <fullName>X27_a__c</fullName>
    <inlineHelpText>a. Are any of the organization’s officers, directors, trustees or employees related by blood, marriage, or adoption to</inlineHelpText>
    <label>27(a) Related Persons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) any other officer, director, trustee or employee</fullName>
            </value>
            <value>
                <fullName>(2) any officer, agent, or employee of any fundraising professional firm under contract to the organization</fullName>
            </value>
            <value>
                <fullName>(3) any officer, agent, or employee of a supplier or vendor firm providing goods or services to the organization?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>