force-app/main/default/objects/Charitable_Solicitation_Registration1__c/fields/X27_b__c.field-meta.xml
<CustomField>
    <fullName>X27_b__c</fullName>
    <inlineHelpText>b. Does the organization or any of its officers, directors, employees, or anyone holding a financial interest in the organization have a financial interest in, or serve as an officer, director, partner or employee of, a business described in (2) or (3) above?</inlineHelpText>
    <label>27(b) Related Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>